<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable name="firstName" type="String" />
        <variable name="lastName" type="String" />
        <variable
            name="isChecked"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register">


    <TextView
        android:id="@+id/addWorkoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latobold"
        android:text="@string/AddWorkout"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/addWorkoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latobold"
            android:text="@{firstName + ' ' + lastName}"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exercise"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Exercise"
        android:visibility="@{isChecked ? View.VISIBLE : View.GONE}"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addWorkoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/latoregular"
        android:paddingStart="15dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/exerciseSpinner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:hint="Exercise"
        android:textSize="18dp"
        android:gravity=""
        android:visibility="@{isChecked ? View.GONE : View.VISIBLE}"
        app:ms_dropdown_max_height="300dp"
        app:ms_background_color="@color/background"
        app:ms_hint_color="@android:color/darker_gray"
        app:ms_text_color="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addWorkoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sets"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Sets"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addWorkoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:paddingStart="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/urlinput"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="URL"
            app:boxStrokeColor="#00000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addWorkoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.80">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/latoregular"
                android:paddingStart="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reps"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Reps"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addWorkoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:paddingStart="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/duration"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Duration"
        android:orientation="vertical"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:paddingStart="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rest"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Rest"
        android:orientation="vertical"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:paddingStart="15dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/addWorkoutButton"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/isu_red"
        android:fontFamily="@font/latobold"
        android:text="@string/AddWorkout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <CheckBox
        android:id="@+id/addExercise"
        android:layout_width="wrap_content"
        android:layout_height="60px"
        android:buttonTint="@color/isu_yellow"
        android:fontFamily="@font/latoregular"
        android:text="@string/AddExercise"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/addWorkout"
        android:layout_width="wrap_content"
        android:layout_height="60px"
        android:buttonTint="@color/isu_yellow"
        android:fontFamily="@font/latoregular"
        android:text="@string/AddWorkout"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/removeExercise"
            android:layout_width="wrap_content"
            android:layout_height="60px"
            android:buttonTint="@color/isu_yellow"
            android:fontFamily="@font/latoregular"
            android:text="@string/RemoveExercise"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.73"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>