<resources>
    <string name="app_name">MyExperiments</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">CyCoach</string>
    <string name="second_fragment_label">Registration</string>
    <string name="third_fragment_label">Dashboard</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Signin">Sign in</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Register">Register</string>
    <string name="Register_Text">------------------------------  or  ------------------------------</string>
    <string name="enter_password">Password</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>